feat(mcp-multimodal): update MultimodalService and related files