@@ -1,6 +1,7 @@
 package run.mone.mcp.multimodal.function;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import reactor.core.publisher.Flux;
 import run.mone.hive.mcp.function.McpFunction;
@@ -12,10 +13,14 @@ import java.util.List;
 import java.util.Map;
 
 @Component
-@RequiredArgsConstructor
 public class MultimodalFunction implements McpFunction {
 
     private final MultimodalService multimodalService;
+
+    @Autowired
+    public MultimodalFunction(MultimodalService multimodalService) {
+        this.multimodalService = multimodalService;
+    }
 
     private static final String TOOL_SCHEMA = """
             {
@@ -23,7 +28,7 @@ public class MultimodalFunction implements McpFunction {
                 "properties": {
                     "operation": {
                         "type": "string",
-                        "enum": ["analyzeScreenshot", "click", "doubleClick", "rightClick", "dragAndDrop", "typeText", "pressHotkey"],
+                        "enum": ["analyzeScreenshot", "click", "doubleClick", "rightClick", "dragAndDrop", "typeText", "pressHotkey", "takeScreenshot"],
                         "description": "The operation to perform on the user interface"
                     },
                     "imageBase64": {
@@ -68,6 +73,10 @@ public class MultimodalFunction implements McpFunction {
                             "type": "string"
                         },
                         "description": "List of keys to press simultaneously as a hotkey combination"
+                    },
+                    "filePath": {
+                        "type": "string",
+                        "description": "The file path to save the screenshot"
                     }
                 },
                 "required": ["operation"]
@@ -85,23 +94,35 @@ public class MultimodalFunction implements McpFunction {
                             (String) arguments.get("imageBase64"),
                             (String) arguments.get("instruction"));
                     case "click" -> multimodalService.click(
-                            ((Number) arguments.get("x")).intValue(),
-                            ((Number) arguments.get("y")).intValue());
+                            Integer.parseInt((String) arguments.get("x")),
+                            Integer.parseInt((String) arguments.get("y")));
                     case "doubleClick" -> multimodalService.doubleClick(
-                            ((Number) arguments.get("x")).intValue(),
-                            ((Number) arguments.get("y")).intValue());
+                            Integer.parseInt((String) arguments.get("x")),
+                            Integer.parseInt((String) arguments.get("y")));
                     case "rightClick" -> multimodalService.rightClick(
-                            ((Number) arguments.get("x")).intValue(),
-                            ((Number) arguments.get("y")).intValue());
+                            Integer.parseInt((String) arguments.get("x")),
+                            Integer.parseInt((String) arguments.get("y")));
                     case "dragAndDrop" -> multimodalService.dragAndDrop(
-                            ((Number) arguments.get("startX")).intValue(),
-                            ((Number) arguments.get("startY")).intValue(),
-                            ((Number) arguments.get("endX")).intValue(),
-                            ((Number) arguments.get("endY")).intValue());
+                            Integer.parseInt((String) arguments.get("startX")),
+                            Integer.parseInt((String) arguments.get("startY")),
+                            Integer.parseInt((String) arguments.get("endX")),
+                            Integer.parseInt((String) arguments.get("endY")));
                     case "typeText" -> multimodalService.typeText(
                             (String) arguments.get("text"));
-                    case "pressHotkey" -> multimodalService.pressHotkey(
-                            (List<String>) arguments.getOrDefault("keys", Collections.emptyList()));
+                    case "pressHotkey" -> {
+                        Object keysObj = arguments.get("keys");
+                        List<String> keys;
+                        if (keysObj instanceof String) {
+                            // Handle case where keys is a comma-separated string
+                            keys = List.of(((String) keysObj).split(","));
+                        } else {
+                            // Handle case where keys is already a list
+                            keys = (List<String>) keysObj;
+                        }
+                        yield multimodalService.pressHotkey(keys != null ? keys : Collections.emptyList());
+                    }
+                    case "takeScreenshot" -> multimodalService.captureScreenshotWithRobot(
+                            (String) arguments.getOrDefault("filePath", null));
                     default -> throw new IllegalArgumentException("Unknown operation: " + operation);
                 };
                 return result.map(res -> new McpSchema.CallToolResult(List.of(new McpSchema.TextContent(res)), false));
